--- a/cookies.html
+++ b/cookies.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informativa sui Cookies</title>
-    <link rel="icon" type="image/x-icon" href="favicon1.ico?v=2">
+     <!-- PNG moderni -->
+<link rel="icon" href="/favicon1.png?v=3" type="image/png" sizes="32x32">
+<link rel="icon" href="/favicon1.png?v=3" type="image/png" sizes="16x16">
+
+<!-- ICO fallback -->
+<link rel="shortcut icon" href="/favicon1.ico?v=3" type="image/x-icon">
+
+<!-- Apple Touch (Safari / iOS) -->
+<link rel="apple-touch-icon" href="/favicon1.png?v=3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         * {
