--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naturalismnatural </title>
+    <!-- SEO Base -->
+  <title>Naturalismnatural</title>
+  <meta name="description" content="Scopri NaturalismNatural">
+  <meta name="keywords" content="naturale, bio, sostenibile, prodotti eco, cura personale, eco friendly, green">
+  
+  <!-- Open Graph (Facebook / WhatsApp / LinkedIn) -->
+  <meta property="og:title" content="Naturalismnatural">
+  <meta property="og:description" content="Scopri NaturalismNatural">
+  <meta property="og:image" content="https://naturalismnatural.com/favicon1.png?v=3">
+  <meta property="og:url" content="https://naturalismnatural.com">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Naturalismnatural">
+  <meta name="twitter:description" content="Scopri NaturalismNatural">
+  <meta name="twitter:image" content="https://naturalismnatural.com/favicon1.png?v=3">
+
    <!-- PNG moderni -->
 <link rel="icon" href="/favicon1.png?v=3" type="image/png" sizes="32x32">
 <link rel="icon" href="/favicon1.png?v=3" type="image/png" sizes="16x16">
